# EuGraphRAG

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
notebooks/: 01_sql_exercises.ipynb  02_pyspark_intro.ipynb  03_pyspark_pipeline.ipynb
spark/: __init__.py  gold.py  ingestion.py  quality_checks.py  schemas.py  transformations.py
sql/init/: 01_schema.sql  02_seed_data.sql
tests/: conftest.py  test_gold.py  test_ingestion.py  test_transformations.py
